# chiaki-ng

./: CMakeLists.txt
.github/workflows/: android-build-clean.yml  android-build-final.yml  android-build-java17-inprocess.yml  android-build-java8-final.yml  android-build-java8.yml  android-build-manual.yml  android-build-no-kapt.yml  android-build-optimized.yml  android-build-simple.yml  android-build-success.yml  android-build.yml  android-test.yml  android.yml
android/: build.gradle  gradle.properties
android/app/: CMakeLists.txt  build.gradle
android/app/cmake/: custom-config.cmake  openssl-toolchain.cmake
android/app/src/main/java/com/metallic/chiaki/common/: ManualHost.kt  RegisteredHost.kt  SerializedSettings.kt
android/app/src/main/java/com/metallic/chiaki/main/: MainViewModel.kt
android/app/src/main/java/com/metallic/chiaki/manualconsole/: EditManualConsoleViewModel.kt
android/app/src/main/java/com/metallic/chiaki/regist/: RegistExecuteViewModel.kt
android/app/src/main/java/com/metallic/chiaki/settings/: SettingsRegisteredHostsViewModel.kt  SettingsViewModel.kt
android/app/src/main/java/com/metallic/chiaki/stream/: StreamActivity.kt
android/app/src/main/java/com/metallic/chiaki/touchcontrols/: ControllerPresentation.kt  TouchControlsFragment.kt  TouchpadOnlyFragment.kt
android/app/src/main/res/layout/: presentation_controller.xml
android/gradle/wrapper/: gradle-wrapper.properties
cmake/: OpenSSLExternalProject.cmake
lib/: CMakeLists.txt
lib/src/: ctrl.c  session.c  thread.c
scripts/: apply-oboe-patches.sh
(+2 files in other folders)
